-- Tier transform sounds/icons added
git-svn-id: svn://x.zeq2.com/Quake3/Source@324 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/cgame/cgame.vcproj
+++ b/cgame/cgame.vcproj
@@ -1499,7 +1499,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="cg_tiersystem.c"
+				RelativePath="cg_tiers.c"
 				>
 				<FileConfiguration
 					Name="Release TA|Win32"
