git-svn-id: svn://x.zeq2.com/Quake3/Source@409 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/cgame/cgame.vcproj
+++ b/cgame/cgame.vcproj
@@ -1928,6 +1928,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\cg_tiers.h"
+				>
+			</File>
+			<File
 				RelativePath="cg_userweapons.h"
 				>
 			</File>
