git-svn-id: svn://x.zeq2.com/Quake3/Source@439 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/q3_ui/q3_ui.vcproj
+++ b/q3_ui/q3_ui.vcproj
@@ -170,6 +170,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ui_camera.c"
+				>
+			</File>
+			<File
 				RelativePath=".\ui_cdkey.c"
 				>
 			</File>
