Fixed explosion spawn point.
git-svn-id: svn://x.zeq2.com/Quake3/Source@479 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/game/game.vcproj
+++ b/game/game.vcproj
@@ -2167,6 +2167,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\g_tiers.c"
+				>
+			</File>
+			<File
 				RelativePath="g_trigger.c"
 				>
 				<FileConfiguration
@@ -2801,6 +2805,10 @@
 			</File>
 			<File
 				RelativePath="g_team.h"
+				>
+			</File>
+			<File
+				RelativePath=".\g_tiers.h"
 				>
 			</File>
 			<File
