--- a/game/game.vcproj
+++ b/game/game.vcproj
@@ -1179,6 +1179,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath="..\cgame\cgame.def"
+				>
+			</File>
+			<File
 				RelativePath="g_active.c"
 				>
 				<FileConfiguration
