-- Fixed radar up. Possible to hide yourself based on current power level, and shows stronger power levels with a color tint, the stronger the tint, the stronger the power level compared to your own. -- Added new clampAnimMap feature to shaders. -- Added temporary intro video for testing purposes.
git-svn-id: svn://x.zeq2.com/Quake3/Source@664 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/cgame/cgame.vcproj
+++ b/cgame/cgame.vcproj
@@ -1787,6 +1787,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\cgame.def"
+				>
+			</File>
+			<File
 				RelativePath="..\game\q_math.c"
 				>
 				<FileConfiguration
