-- Added bloom options in the 'Game Options' menu. -- Added selection of a camera style 'Delay Behind Character' in the 'Game Options' menu.
git-svn-id: svn://x.zeq2.com/Quake3/Source@755 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/cgame/cgame.vcproj
+++ b/cgame/cgame.vcproj
@@ -1101,6 +1101,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\cg_music.c"
+				>
+			</File>
+			<File
 				RelativePath="cg_newDraw.c"
 				>
 				<FileConfiguration
@@ -1921,6 +1925,10 @@
 			</File>
 			<File
 				RelativePath="cg_local.h"
+				>
+			</File>
+			<File
+				RelativePath=".\cg_music.h"
 				>
 			</File>
 			<File
