Added new Startup scripts, fixed UI gametype (hidden every gametype that isnt 0) WARNING : do not add any server config in defaults.cfg, this file is subject to corruption.
Note : the cfg file is an easy method of publishing a server, note that i have found serious 
masters and that i am going to add them to client too.

git-svn-id: svn://x.zeq2.com/Quake3/Source@1193 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/Tools/MSVC/Engine.vcproj
+++ b/Tools/MSVC/Engine.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="Engine"
 	ProjectGUID="{81CB51C4-B434-4E12-B69B-BAEE102F2852}"
 	TargetFrameworkVersion="131072"
@@ -79,6 +79,7 @@
 				OutputFile="$(SolutionDir)\Debug\ZEQ2.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="C:\SDK\zeq\SVN\Source\Engine\libs\win32"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)\zeq2lite.pdb"
