Final fix of Engine.vcproj : libs, preprocessor
git-svn-id: svn://x.zeq2.com/Quake3/Source@1522 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/Tools/MSVC/Engine.vcproj
+++ b/Tools/MSVC/Engine.vcproj
@@ -47,7 +47,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\Engine\libcurl; ..\..\Engine\AL; ..\..\Engine\libspeex\include; ..\..\Engine\SDL12\include; ..\..\Engine\zlib"
-				PreprocessorDefinitions="_WIN32; WIN32; _DEBUG; _WINDOWS; _CRT_SECURE_NO_DEPRECATE; BOTLIB; USE_ICON; USE_CURL; USE_CURL_DLOPEN; USE_OPENAL; USE_OPENAL_DLOPEN; USE_VOIP; HAVE_CONFIG_H; STANDALONE"
+				PreprocessorDefinitions="_WIN32;WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE;BOTLIB;USE_ICON;USE_CURL;USE_CURL_DLOPEN;USE_VOIP;USE_CODEC_VORBIS;HAVE_CONFIG_H;STANDALONE"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile="$(IntDir)\zeq2lite.pch"
@@ -75,11 +75,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="user32.lib advapi32.lib winmm.lib wsock32.lib ws2_32.lib SDLmain.lib SDL.lib OpenGL32.lib msvcrt.lib psapi.lib"
+				AdditionalDependencies="user32.lib advapi32.lib winmm.lib wsock32.lib ws2_32.lib SDLmain.lib SDL.lib OpenGL32.lib msvcrt.lib psapi.lib libvorbisfile.lib"
 				OutputFile="$(SolutionDir)\Debug\ZEQ2.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="C:\SDK\zeq\SVN\Source\Engine\libs\win32"
+				AdditionalLibraryDirectories="..\..\Engine\libs\win32"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)\zeq2lite.pdb"
@@ -150,7 +150,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="2"
 				AdditionalIncludeDirectories="..\..\Engine\SDL12\include; ..\..\Engine\libcurl; ..\..\Engine\AL; ..\..\Engine\libspeex\include; ..\..\Engine\zlib"
-				PreprocessorDefinitions="_WIN32; WIN32; NDEBUG; _WINDOWS; _CRT_SECURE_NO_DEPRECATE; BOTLIB; USE_ICON; USE_CURL; USE_CURL_DLOPEN; USE_OPENAL; USE_OPENAL_DLOPEN; USE_VOIP; HAVE_CONFIG_H; STANDALONE"
+				PreprocessorDefinitions="_WIN32;WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE;BOTLIB;USE_ICON;USE_CURL;USE_CURL_DLOPEN;USE_VOIP;USE_CODEC_VORBIS;HAVE_CONFIG_H;STANDALONE"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -176,10 +176,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="user32.lib advapi32.lib winmm.lib wsock32.lib ws2_32.lib SDLmain.lib SDL.lib OpenGL32.lib msvcrt.lib psapi.lib"
+				AdditionalDependencies="user32.lib advapi32.lib winmm.lib wsock32.lib ws2_32.lib SDLmain.lib SDL.lib libvorbisfile.lib OpenGL32.lib msvcrt.lib psapi.lib"
 				OutputFile="$(SolutionDir)\Release\ZEQ2.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="..\..\Engine\libs\win32"
 				GenerateDebugInformation="false"
 				ProgramDatabaseFile="$(IntDir)\zeq2lite.pdb"
 				GenerateMapFile="true"
