- No more player turning delay when moving. - Use no animated camera origin or angles whatsoever if the animated camera has camera locked turned on for a specific animation. - Prototype camera tweening, use cg_thirdPersonCamera 5 or 6 to test them.
git-svn-id: svn://x.zeq2.com/Quake3/Source@1713 1e7f69a8-e265-0410-9af5-ca8027663dd9

--- a/Tools/MSVC/CGame.vcproj
+++ b/Tools/MSVC/CGame.vcproj
@@ -773,6 +773,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\Game\CGame\cg_tiers.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Game\CGame\cg_userweapons.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Game\CGame\cg_weapGfxParser.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\Shared\q_shared.h"
 				>
 			</File>
